--- a/style.css
+++ b/style.css
@@ -1,3 +1,57 @@
+* {
+  	padding: 0;
+ 	margin: 0;
+ 	-webkit-box-sizing: border-box;
+ 	        box-sizing: border-box;
+}
+
 body {
-  margin-top: 60px;
+  	font-size: 12pt;
+  	font-family: sans-serif; 
+ 	padding: 30px 10px;
+}
+
+#main {
+	background-color: #eee;
+  	-webkit-border-radius: 5px;
+  	        border-radius: 5px;
+  	padding: 10px;
+}
+
+#title, #title + p, h3 {
+	text-align: center;
+	margin: 1em;
+}
+
+#img-div {
+	background-color: #fff;
+	padding: 1px;
+}
+
+#image {
+	display: block;
+	max-width: 100%;
+	margin: auto;
+}
+
+#img-caption {
+	text-align: center;
+	margin: 1em;
+}
+
+#tribute-info {
+	padding: 5px;
+}
+
+ul {
+	max-width: 600px;
+	margin: auto;
+}
+li {
+	margin: 1em 0em;
+}
+
+blockquote p, blockquote + p{
+	text-align: center;
+	margin: 1em;
 }
